--- a/index.html
+++ b/index.html
@@ -9,10 +9,95 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.css"
     />
+
+    <style>
+      [class*="col"] {
+        padding: 1rem;
+        background-color: aqua;
+        border: 2px solid #fff;
+        color: #fff;
+      }
+      .child {
+        background-color: #2041d3;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello npm world</h1>
-    <button type="button" class="btn btn-primary">Primary</button>
+    <!-- container fluid to take full width of the screen -->
+    <div class="container border">
+      <div class="row">
+        <div class="col-lg-6 col-md-6">Col 1</div>
+        <div class="col-lg-6 col-md-6">Col 2</div>
+      </div>
+    </div>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
+        </div>
+      </div>
+    </div>
+
+    <div class="container border" style="background-color: red">
+      <!-- row align-items-center
+      row align-items-start
+    row align-items-end -->
+      <div class="row align-items-center" style="height: 500px">
+        <div class="col">One of three columns</div>
+        <div class="col">One of three columns</div>
+        <div class="col">One of three columns</div>
+      </div>
+    </div>
+
+    <div class="container border">
+      <div class="row justify-content-center">
+        <div class="col-2">Col 1</div>
+        <div class="col-2">Col 2</div>
+      </div>
+    </div>
+
+    <div class="container my-5 border">
+      <div class="row gx-4 gy-5">
+        <div class="col-6"><div class="child">1</div></div>
+        <div class="col-6"><div class="child">2</div></div>
+        <div class="col-6"><div class="child">3</div></div>
+        <div class="col-6"><div class="child">4</div></div>
+      </div>
+    </div>
+
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
 </html>
