--- a/index.html
+++ b/index.html
@@ -23,79 +23,33 @@
     </style>
   </head>
   <body>
-    <!-- container fluid to take full width of the screen -->
+    <h1>Buttons</h1>
     <div class="container border">
-      <div class="row">
-        <div class="col-lg-6 col-md-6">Col 1</div>
-        <div class="col-lg-6 col-md-6">Col 2</div>
-      </div>
-    </div>
-    <div class="container my-5">
-      <div class="row">
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-        <div class="col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-          col-xxl-1 col-xl-2 col-lg-3 col-md-4 col-sm-6 col-xs-12
-        </div>
-      </div>
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-secondary">Secondary</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+      <button type="button" class="btn btn-warning">Warning</button>
+      <button type="button" class="btn btn-info">Info</button>
+      <button type="button" class="btn btn-light">Light</button>
+      <button type="button" class="btn btn-dark">Dark</button>
+
+      <button type="button" class="btn btn-link">Link</button>
     </div>
 
-    <div class="container border" style="background-color: red">
-      <!-- row align-items-center
-      row align-items-start
-    row align-items-end -->
-      <div class="row align-items-center" style="height: 500px">
-        <div class="col">One of three columns</div>
-        <div class="col">One of three columns</div>
-        <div class="col">One of three columns</div>
-      </div>
-    </div>
-
-    <div class="container border">
-      <div class="row justify-content-center">
-        <div class="col-2">Col 1</div>
-        <div class="col-2">Col 2</div>
-      </div>
+    <div class="container border my-5">
+      <button type="button" class="btn btn-outline-primary">Primary</button>
+      <button type="button" class="btn btn-outline-secondary">Secondary</button>
+      <button type="button" class="btn btn-outline-success">Success</button>
+      <button type="button" class="btn btn-outline-danger">Danger</button>
+      <button type="button" class="btn btn-outline-warning">Warning</button>
+      <button type="button" class="btn btn-outline-info">Info</button>
+      <button type="button" class="btn btn-outline-light">Light</button>
+      <button type="button" class="btn btn-outline-dark">Dark</button>
     </div>
 
     <div class="container my-5 border">
-      <div class="row gx-4 gy-5">
-        <div class="col-6"><div class="child">1</div></div>
-        <div class="col-6"><div class="child">2</div></div>
-        <div class="col-6"><div class="child">3</div></div>
-        <div class="col-6"><div class="child">4</div></div>
-      </div>
+      <button type="button" class="btn btn-primary btn-sm">Small button</button>
     </div>
 
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
